--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.21",
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.12",
+        "postcss": "^8.1.14",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
+    },
+    "name": "lr.rbg-dev.com",
+    "dependencies": {
+        "@react-google-maps/api": "^2.1.0",
+        "react-bootstrap": "^1.4.3",
+        "react-icons": "^4.1.0",
+        "react-router-dom": "^5.2.0"
     }
 }
