--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@babel/preset-react": "^7.12.13",
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
